# Kinematics

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
configs/: kinematics_settings.toml  pca9685.toml  physical_measurements_required.toml  poses.toml  robot_geometry.toml  servo_calibration.toml  singularity_analysis.toml  webots_simulation.toml
examples/: observed_position_measurements.csv  print_config_summary.py  test.py
examples/kinematics_config/: __init__.py  loader.py
simulation/protos/: PickObject.proto  RobotArm.proto  RobotWorkcell.proto
simulation/scripts/: run_webots.sh  smoke_test_webots.sh  validate_project.py
simulation/tools/: export_step_parts.py  invoke_export.sh
simulation/worlds/: .robot_arm_pick_and_place.wbproj  robot_arm_pick_and_place.wbt
src/: api.py  main.py
src/calibration/: __init__.py  cli.py  fitting.py  io.py  models.py
src/config/: config_checker.py  config_loader.py  servo_compatibility.py
src/hardware/: __init__.py  pca9685_motion_sink.py
src/kinematics/: accuracy_evaluator.py  analysis_models.py  angle_to_pwm.py  forward_kinematics.py  inverse_kinematics.py  jacobian.py  manipulability.py  observed_position_evaluator.py  singularity_analyzer.py  singularity_policy.py  solution_selector.py  workspace_checker.py
src/model/: result_model.py
src/motion/: __init__.py  executor.py  trajectory.py
src/planning/: __init__.py  models.py  pick_and_place_planner.py  validators.py  waypoint_generator.py
src/robot_testing/: __init__.py  fault_injection.py
src/simulator/: __init__.py  coordinate_frames.py  webots_motion_sink.py
tests/: policy_helpers.py  test_fault_injection.py  test_inverse_kinematics.py  test_jacobian.py  test_manipulability.py  test_manual_control.py  test_motion_executor_faults.py  test_observed_position_evaluator.py  test_pca9685_faults.py  test_pca9685_motion_sink.py  test_physical_measurements.py  test_pick_and_place.py  test_pick_and_place_faults.py  test_servo_compatibility.py  test_singularity_analyzer.py  test_singularity_policy.py  test_solution_selector.py  test_webots_adapter.py
tools/: check_servo_compatibility.py  fit_servo_calibration.py  servo_calibration_measurements_template.csv  visualize_workspace.ipynb  workspace_roulette.py
(+7 files in other folders)
