[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-arm-kinematics"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "python-statemachine>=2.5,<3",
    "numpy>=2.5.1"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]